--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,9 +2,13 @@
   "name": "web",
   "private": true,
   "version": "0.1.0",
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export -o ../../dist/apps/web",
+    "build": "next build",
+    "start": "next start -p 3000",
     "lint": "next lint"
   },
   "dependencies": {
